--- a/style.css
+++ b/style.css
@@ -5,9 +5,15 @@
     outline: solid 2px red;
 }
 
-section {
+img {
+max-width: 100%;
+height: auto;
+}
+
+.section {
     display: flex;
     justify-content: space-evenly;
+    /* position: absolute; */
 }
 
 header {
@@ -25,3 +31,85 @@ header ul {
 display: flex;
 gap:1rem;
 }
+
+.box4 {
+background-color: blueviolet;
+color: aliceblue;
+font-size: 2rem;
+display: flex;
+justify-content: center;
+align-items: center;
+
+/* position: relative;
+top: 200px;
+right: 200px; */
+}
+
+.section2 {
+outline: solid 2px green;
+max-width: 30rem;
+height: 70vh;
+margin: 0 auto;
+padding: 2rem;
+font-size: 18px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+/* position: relative; */
+}
+
+.section2 img {
+/* outline: 2px dashed blue; */
+} 
+ 
+.section2 p {
+text-align: center;
+/* font-size: 2em;; */
+}
+
+.marque {
+position: absolute;
+top: 1rem;
+right: 2rem;;
+text-transform: uppercase;
+font-weight: bolder;
+}
+
+/*- HERO -*/
+
+/* .hero {
+position: relative;
+}*/
+
+.hero h1 {
+color: white;
+text-transform: uppercase;
+background-color: #333;
+padding: 1rem 2rem;
+}
+
+/*.hero h1 {
+position: absolute;
+top: 50%;
+right: 50%;
+transform: translate(50%,-50%);
+} */
+
+.hero {
+background-image: url("./milkyway.jpg") ;
+background-repeat: no-repeat;
+background-size: cover;
+height: 853px; 
+display: flex;
+justify-content: center;
+align-items: center;
+outline: solid 2px red;;
+}
+
+
+
+
+
+
+
+
